--- a/index.html
+++ b/index.html
@@ -180,6 +180,18 @@
                             <canvas id="mttrChart"></canvas>
                         </div>
                     </div>
+                    <div class="chart-container chart-wide">
+                        <div class="chart-header">
+                            <h3 class="chart-title">Long Tail de Ocorrências</h3>
+                            <select id="longTailStatusFilter" class="form-control">
+                                <option value="abertas">Em Aberto</option>
+                                <option value="fechadas">Fechadas</option>
+                            </select>
+                        </div>
+                        <div class="chart-content">
+                            <canvas id="longTailChart"></canvas>
+                        </div>
+                    </div>
                 </div>
             </section>
 
