[CHG] MELHORANDO A ABA DE CONFIGURAÇÕES

--- a/index.html
+++ b/index.html
@@ -309,6 +309,14 @@
                         <option value="dark">Escuro</option>
                     </select>
                 </div>
+                <div class="form-group">
+                    <label for="itemsPerPage" class="form-label">Itens por Página:</label>
+                    <input type="number" id="itemsPerPage" class="form-control" min="5" max="50" step="5" value="15">
+                </div>
+                <div class="form-group">
+                    <label for="heatRadius" class="form-label">Intensidade do Heatmap:</label>
+                    <input type="range" id="heatRadius" min="10" max="50" step="5" value="25">
+                </div>
             </section>
         </main>
     </div>
