Add agency detail modal and table links

--- a/index.html
+++ b/index.html
@@ -321,6 +321,19 @@
         </main>
     </div>
 
+    <!-- Agency Info Modal -->
+    <div id="agencyModal" class="modal hidden">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h3 class="modal-title">Informações da Agência</h3>
+                <button class="modal-close" id="closeAgencyModal" aria-label="Fechar">&times;</button>
+            </div>
+            <div class="modal-body">
+                <div id="agencyModalBody"></div>
+            </div>
+        </div>
+    </div>
+
     <!-- Incident Detail Modal -->
     <div id="incidentModal" class="modal hidden">
         <div class="modal-content modal-content--large">
